[gd_scene load_steps=7 format=3 uid="uid://13gbuxd8cm3"]

[ext_resource type="Texture2D" uid="uid://cm4xavbqi2pqg" path="res://icon.svg" id="1_jh0f7"]
[ext_resource type="Script" path="res://Code/level_selector.gd" id="1_un1jk"]
[ext_resource type="Texture2D" uid="uid://bnpw21exhjtr4" path="res://Sprites/main-bg.png" id="2_0u61y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v77m7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y64d8"]

[sub_resource type="Theme" id="Theme_jbeyo"]
Button/styles/disabled = SubResource("StyleBoxEmpty_v77m7")
Button/styles/normal = SubResource("StyleBoxEmpty_y64d8")

[node name="Level selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_un1jk")

[node name="imagine level" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.5
offset_top = -204.0
offset_right = 358.5
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jh0f7")

[node name="bg" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0u61y")

[node name="stanga" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -204.0
offset_right = 159.0
offset_bottom = 204.0
grow_vertical = 2

[node name="dreapta" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -204.0
offset_bottom = 204.0
grow_horizontal = 0
grow_vertical = 2

[node name="start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.5
offset_top = -204.0
offset_right = 358.5
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jbeyo")

[node name="Inapoi" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 588.0
offset_right = 260.0
offset_bottom = 638.0
text = "<-"

[connection signal="pressed" from="stanga" to="." method="_on_stanga_pressed"]
[connection signal="pressed" from="dreapta" to="." method="_on_dreapta_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Inapoi" to="." method="_on_inapoi_pressed"]
